components/demo/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: demo 
  name: demo
spec:
  ports:
  - port:  
    targetPort:  
  selector:
    app.kubernetes.io/instance: demo
