components/demo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: demo 
  name: demo
spec:
  port:
    targetPort:  
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: demo
    weight: 100
